--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
     "name": "PhasmaMate",
-    "version": "1.0.0",
+    "version": "0.0.1",
     "main": "app.js",
     "scripts": {
-      "start": "electron ."
+        "start": "electron ."
     },
     "dependencies": {
-      "electron": "^20.0.0"
+        "axios": "^1.7.4",
+        "electron": "^20.0.0"
     }
-  }
-  
+}
