--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     },
     "dependencies": {
         "axios": "^1.7.4",
-        "electron": "^20.0.0"
+        "electron": "^20.0.0",
+        "node-fetch": "^3.3.2",
+        "unzipper": "^0.12.3"
     }
 }
