--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "build": "react-scripts build"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.8",
+    "@testing-library/react": "^16.0.0",
+    "@types/jest": "^29.5.12",
     "@types/prettier": "^3.0.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/sockjs": "^0.3.36",
     "@types/yargs": "^17.0.33",
+    "jest": "^27.5.1",
     "react-scripts": "^5.0.0"
   },
   "browserslist": {
