yeni pencere olayını bora yapsın aga

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "phasmamate",
   "version": "1.0.0",
-  "main": "electron.js",
+  "main": "main.js",
   "private": true,
   "dependencies": {
     "react": "^18.0.0",
