--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "phasmamate",
   "version": "1.0.0",
-  "main": "main.js",
+  "main": "main.py",
   "private": true,
   "dependencies": {
+    "@types/node": "^22.4.1",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "typescript": "^4.0.0"
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,5 +42,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "![PhasmaMate (1)](https://github.com/user-attachments/assets/40d99a39-7023-4377-8818-88965361b2f1)",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
