--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "typescript": "^4.9.5"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "cross-env BROWSER=none react-scripts start",
     "electron": "concurrently \"npm:start\" \"wait-on http://localhost:3000 && node delay.js && electron .\""
   },
   "devDependencies": {
