a lot of changes about error handling

--- a/config.ini
+++ b/config.ini
@@ -3,3 +3,8 @@ retries = 3
 initial_delay = 5
 log_level = INFO
 error_page = Asset/error.html
+
+[Notifications]
+email_on_failure = recipient@example.com
+email_server = smtp.gmail.com
+email_port = 587
